--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       rel="stylesheet"
     />
     <link href="/style.css" rel="stylesheet" />
+
+    <script
+      defer
+      data-domain="instantfilm.net"
+      src="https://plausible.io/js/script.js"
+    ></script>
   </head>
 
   <body>
